--- a/app/heroes.component.css
+++ b/app/heroes.component.css
@@ -4,7 +4,7 @@
 }
 
 .heroes {
-  margin: 0 0 2em 0;
+  margin: 0 0 2em;
   list-style-type: none;
   padding: 0;
   width: 15em;
@@ -66,9 +66,3 @@ button:hover {
   background-color: #cfd8dc;
 }
 
-
-/*
-Copyright 2016 Google Inc. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
-*/
