--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ nav a.active {
 
 /* items class */
 .items {
-  margin: 0 0 2em 0;
+  margin: 0 0 2em;
   list-style-type: none;
   padding: 0;
   width: 24em;
@@ -108,7 +108,7 @@ nav a.active {
 }
 
 .items {
-  margin: 0 0 2em 0;
+  margin: 0 0 2em;
   list-style-type: none;
   padding: 0;
   width: 24em;
@@ -149,7 +149,7 @@ nav a.active {
   display: inline-block;
   font-size: small;
   color: white;
-  padding: 0.8em 0.7em 0 0.7em;
+  padding: 0.8em 0.7em 0;
   background-color: #607d8b;
   line-height: 1em;
   position: relative;
@@ -159,14 +159,9 @@ nav a.active {
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
 }
+
 /* everywhere else */
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
-/*
-Copyright 2016 Google Inc. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
-*/
